--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework_simplejwt==5.5.1
 gunicorn==23.0.0
 h11==0.16.0
 packaging==25.0
+pillow==12.0.0
 psycopg2-binary==2.9.11
 PyJWT==2.10.1
 python-dotenv==1.2.0
